--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div id="container">
-    <h2 style="color:#00ff88;font-family:sans-serif;margin-bottom:20px;">Acceso remoto autorizado</h2>
+    <h2 style="color:#00ff88;font-family:sans-serif;margin-bottom:20px;">fnf mod garcello</h2>
     <button onclick="abrirJuego()">Iniciar sesión segura</button>
   </div>
 
